# fluent-dual-erc20-with-AMM

./: .env.example  .gitignore  README.md  commands.txt  foundry.toml
deployments/: testnet.json
js-client/: README.md  bootstrap.js  config.js  package-lock.json  package.json  test-basic-amm.js
script/: BootstrapAMM.s.sol  DeployAMM.s.sol  DeployTokens.s.sol
src/: BasicAMM.sol  MyToken.sol
src/erc20-rust/: Cargo.toml
src/erc20-rust/src/: lib.rs
src/rust-token/: Cargo.toml
src/rust-token/src/: lib.rs
