[package]
name = "rust-token"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
alloy-sol-types = { version = "1.3.0", default-features = false }
fluentbase-sdk = { git = "https://github.com/fluentlabs-xyz/fluentbase", tag = "v0.4.0-dev", default-features=false }
hex-literal = "1.0.0"


[features]
default = ["std"]
std = ["fluentbase-sdk/std"]
wasm = []

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1



# Exclude from foundry workspace
[workspace]
